finally fix scrollbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,15 +13,14 @@ body {
 .schedule_main_holder {
     width: 100%;
     height: 85vh;
+    display: flex;
+    overflow-x: auto;
 }
 
 .vertical_divider {
     width: 1px;
     height: 100%;
     background-color: var(--light_darker);
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .vertical_divider:nth-last-child(1) {
@@ -119,3 +118,25 @@ body {
     color: white;
     margin-right: 10px;
 }
+
+#greyed_main {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.4) !important;
+}
+
+.schedule_specified_lesson {
+    display: none;
+    width: 60%;
+    height: 400px;
+    background-color: var(--main_light);
+    border: 2px solid var(--main_dark);
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    border-radius: 40px;
+}
+
